added some files for rooms, almost have text chat, starting to style

--- a/WebContent/public/html/lobby.html
+++ b/WebContent/public/html/lobby.html
@@ -2,4 +2,7 @@
     <h1>
         Choose a room
     </h1>
+
+
+    <button class="btn btn-success" ng-click="createRoom()">Create Room</button>
 </div>
