--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Collab</title>
+        <title>ChatBlocs</title>
 
         <!-- Bootstrap Style -->
         <link href="external/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
@@ -11,9 +11,21 @@
 
     </head>
     <body ng-app="collabApp" ng-controller="appCtrl">
-        <h1>
-            Hello World!
-        </h1>
+        <div>
+            <div class="row">
+                <div class="col-md-3 text-center">
+                    <h1>
+                        ChatBlocs
+                    </h1>
+                </div>
+                <div class="col-md-3 text-center">
+                    <h3>
+                        More information
+                    </h3>
+                </div>
+            </div>
+
+        </div>
 
         <div id="page" ng-init="init()" ui-view>
             <!-- everything is loaded in here -->
@@ -36,5 +48,6 @@
     <!-- Custom Scripts -->
     <script src="js/app.js"></script>
     <script src="js/controllers/lobbyController.js"></script>
+    <script src="js/controllers/roomController.js"></script>
 
 </html>
