--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -54,5 +54,6 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/lobbyController.js"></script>
     <script src="js/controllers/roomController.js"></script>
+    <script src="js/controllers/loginController.js"></script>
 
 </html>
