--- a/WebContent/public/html/lobby.html
+++ b/WebContent/public/html/lobby.html
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
-            <ul class="list-group">
+            <ul id="roomsList" class="list-group">
                 <li id="1111" class="list-group-item" ng-click="joinRoom(1111);">
                     <div class="row">
                         <div class="col-sm-2">
