almost got login

--- a/WebContent/public/html/login.html
+++ b/WebContent/public/html/login.html
@@ -1,7 +1,7 @@
 <div ng-controller="loginCtrl" ng-init="init()">
     <div class="row">
         <div class="col-md-offset-4 col-md-4">
-            <input ng-model="username" type="text" name="username"/>
+            <input ng-model="loginName" type="text" name="username"/>
             <button class="btn btn-success" ng-click="login()">Login</button>
         </div>
     </div>
