Basically have the text messages User list in room added everything is streamlined I'm the best

--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -14,20 +14,19 @@
 
     </div>
 
+    <div class="row">
+        <div class="col-md-3">
+            <ul id="userList" class="list-group"></ul>
+        </div>
+    </div>
+
     <div id="messageChatRow" class="row">
         <div class="col-md-offset-9 col-md-3">
             <div id="textChat" class="chat-box padding-md">
                 <div class="row">
                     <div class="col-md-offset-1 col-md-10">
                         <div class="panel">
-                            <ul id="messageList" class="list-group">
-                                <li class="list-group-item">Message here</li>
-                                <li class="list-group-item">Message here</li>
-                                <li class="list-group-item">Message here</li>
-                                <li class="list-group-item">Message here</li>
-                                <li class="list-group-item">Message here</li>
-
-                            </ul>
+                            <ul id="messageList" class="list-group"></ul>
                         </div>
                     </div>
                 </div>
