--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -11,6 +11,7 @@
         <link href="css/main-style.css" rel="stylesheet"/>
         <link href="css/space-size.css" rel="stylesheet"/>
         <link href="css/room-style.css" rel="stylesheet"/>
+        <link href="css/login-style.css" rel="stylesheet"/>
 
 
 
