--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -13,9 +13,15 @@
         </div>
 
     </div>
-
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-1 text-center">
+            <h4 class=" full-size text-center">
+                Users:
+            </h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-1 text-center">
             <ul id="userList" class="list-group"></ul>
         </div>
     </div>
@@ -30,7 +36,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row chat-input text-center">
+                <div class="row text-center">
                     <div class="col-sm-12 text-center">
                         <input class="chat-input" ng-model="message" type="text" name="message" />
                         <button class="btn btn-success chat-input" ng-click="sendMessage();">Send</button>
