Get a stream, but need to catch some exception.

--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -12,6 +12,7 @@
         <div class="col-md-10" id="remoteVideo">
         </div>
 
+        <button class="btn btn-success" ng-click="start();">Start Call</button>
     </div>
 
     <div id="messageChatRow" class="row">
