--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -44,11 +44,16 @@
 
     <!-- Angular -->
     <script src="external/angularjs/angular.min.js"></script>
+    <script src="external/angularjs/angular-sanitize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
 
     <!-- Bootstrap Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="external/bootstrap/js/bootstrap.min.js"></script>
+
+
+    <!-- Socket.io -->
+    <script src="/socket.io/socket.io.js"></script>
 
 
     <!-- Custom Scripts -->
