Examples that work elsewhere but not on our page.

--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -6,11 +6,11 @@
             </h3>
         </div>
 
-        <div class="col-md-10" id="localVideo">
-        </div>
+        <video class="col-md-10 autoplay playsinline" id="localVideo">
+        </video>
 
-        <div class="col-md-10" id="remoteVideo">
-        </div>
+        <video class="col-md-10" id="remoteVideo">
+        </video>
 
         <button class="btn btn-success" ng-click="start(true);">Start Call</button>
     </div>
