lobby still broken

--- a/WebContent/public/html/lobby.html
+++ b/WebContent/public/html/lobby.html
@@ -12,23 +12,17 @@
     <div class="row">
         <div class="col-lg-6 col-lg-offset-3">
             <ul id="roomsList" class="list-group">
-                <!-- Loaded on page load from server -->
 
-
-                <!-- <li ng-repeat="room in rooms" id="{{room.id}}" class="list-group-item" ng-click="joinRoom({{room.id}});"> -->
-
-                <li ng-repeat="room in rooms" class="list-group-item">
+                <li ng-repeat="r in rooms" id="{{room.id}}" class="list-group-item" ng-click="joinRoom({{room.id}});">
                     <div class="row">
                         <div class="col-sm-2">
-                            ID: {{room.id}}
+                            ID: {{r.id}}
                         </div>
                         <div class="col-sm-10">
-                            People: {{room.users}}
+                            People: {{r.users}}
                         </div>
                     </div>
                 </li>
-
-
                 <li class="list-group-item">
                     <button class="btn btn-success full-size" ng-click="createRoom()">
                         Create Room
