Added initial drawing functionality - still need to add controller

--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -12,8 +12,7 @@
         <link href="css/space-size.css" rel="stylesheet"/>
         <link href="css/room-style.css" rel="stylesheet"/>
         <link href="css/login-style.css" rel="stylesheet"/>
-
-
+        <link href="css/canvas-style.css" rel="stylesheet"/>
 
     </head>
     <body ng-app="collabApp" ng-controller="appCtrl">
@@ -61,5 +60,6 @@
     <script src="js/controllers/lobbyController.js"></script>
     <script src="js/controllers/roomController.js"></script>
     <script src="js/controllers/loginController.js"></script>
+    <script src="js/controllers/canvasController.js"></script>
 
 </html>
