--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -14,6 +14,46 @@
 
         <button class="btn btn-success" ng-click="start(true);">Start Call</button>
     </div>
+    <!-- Drawing -->
+    <div ng-controller="">
+        <div class="row">
+            <!-- Canvas -->
+            <div class="col-md-6">
+                <div id="canvasDiv">
+                    <canvas id="drawing" width="560" height="280"></canvas>
+                </div>
+            </div>
+            <!-- End Canvas -->
+            <!-- Selection Tools -->
+            <div class="col-md-6">
+                <button id="clearcanvas">Clear Canvas</button>
+                <button id="erasecanvas">Eraser</button>
+                <button id="pencanvas">Pen</button>
+
+                <div class="colordiv">
+                    Select Color
+                    <ul class="color">
+                        <li class="selectedColor"><span rel="#cb3594" >Purple</span></li>
+                        <li><span rel="#FF0000" >Red</span></li>
+                        <li><span rel="#659b41" >Green</span></li>
+                        <li><span rel="#ffcf33" >Yellow</span></li>
+
+                    </ul>
+                </div>
+
+                <div class="sizediv">
+                    Select Size
+                    <ul class="size">
+                        <li class="selectedColor"><span rel="5" >Small</span></li>
+                        <li><span rel="12" >Medium</span></li>
+                        <li><span rel="20" >Large</span></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End Selection Tools -->
+        </div>
+    </div>
+    <!-- End Drawing -->
     <div class="row">
         <div class="col-md-1 text-center">
             <h4 class=" full-size text-center">
@@ -46,8 +86,4 @@
             </div>
         </div>
     </div>
-
-
-
-
 </div>
