--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -15,7 +15,7 @@
         <button class="btn btn-success" ng-click="start(true);">Start Call</button>
     </div>
     <!-- Drawing -->
-    <div ng-controller="">
+    <div ng-controller="canvasCtrl">
         <div class="row">
             <!-- Canvas -->
             <div class="col-md-6">
