fixed lobby, fixed lag from video

--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -6,7 +6,7 @@
             </h3>
         </div>
 
-        <video class="col-md-10 autoplay playsinline" id="localVideo">
+        <video class="col-md-4 autoplay playsinline" autoplay id="localVideo">
         </video>
 
         <video class="col-md-10" id="remoteVideo">
