--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -15,7 +15,7 @@
         <link href="css/canvas-style.css" rel="stylesheet"/>
 
     </head>
-    <body ng-app="collabApp" ng-controller="appCtrl">
+    <body ng-app="collabApp" ng-controller="appCtrl" class="unselectable">
         <div id="nav">
             <div class="row">
                 <div class="col-md-3 text-center">
