--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -28,7 +28,7 @@
                         More information
                     </h3>
                 </div>
-                <div id="nav-section" class="col-md-offset-3 col-md-3 text-center">
+                <div id="nav-section" class="col-md-offset-3 col-md-3 text-center padding-sm">
 
                 </div>
             </div>
