streaming works for special situations

--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -34,7 +34,7 @@
 
         <div class="col-md-2">
             <div class="margin-xs">
-                <video id="remoteVideo" autoplay></video>
+                <video id="remoteVideo" autoplay height="100%" width="100%"></video>
             </div>
         </div>
     </div>
