--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -53,7 +53,7 @@
 
 
         <!-- Message box -->
-        <div class="col-md-offset-1 col-md-2">
+        <div class="col-md-3">
             <div id="textChat" class="chat-box padding-md">
                 <div class="row">
                     <div class="col-md-offset-1 col-md-10">
