added dynamic remote video creation. Should be draggable. Testing on my laptop

--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -1,4 +1,13 @@
 <div ng-controller="roomCtrl" ng-init="init()">
+
+    <div id="videoContainer">
+
+    </div>
+    <dragDiv id="test" class="draggable" draggable="true">
+        Test Drag
+    </dragDiv>
+
+
     <div class="row">
         <div class="col-md-3">
             <h3>
