--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -43,6 +43,7 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Angular -->
     <script src="external/angularjs/angular.min.js"></script>
