Testing mouse coordinate options

--- a/WebContent/public/html/room.html
+++ b/WebContent/public/html/room.html
@@ -48,7 +48,7 @@
 
     <div class="row">
         <div ng-include="'html/canvas.html'">
-            <!-- loads canvs in here on page load -->
+            <!-- loads canvas in here on page load -->
         </div>
 
 
