help merge and better lobby

--- a/WebContent/public/html/lobby.html
+++ b/WebContent/public/html/lobby.html
@@ -19,7 +19,7 @@
                             ID: {{r.id}}
                         </div>
                         <div class="col-sm-10">
-                            People: <span ng-repeat="u in r.users">{{u}}</span>{{r.users}}
+                            People: <span ng-repeat="u in r.users">{{u}}, </span>
                         </div>
                     </div>
                 </li>
