--- a/WebContent/public/html/lobby.html
+++ b/WebContent/public/html/lobby.html
@@ -19,7 +19,7 @@
                             ID: {{r.id}}
                         </div>
                         <div class="col-sm-10">
-                            People: <span ng-repeat="u in r.users">{{u}}, </span>
+                            People: [ <span ng-repeat="u in r.users">{{u}} : </span>more room available ]
                         </div>
                     </div>
                 </li>
