--- a/WebContent/public/html/canvas.html
+++ b/WebContent/public/html/canvas.html
@@ -19,9 +19,12 @@
 
         <div class="row">
             <div class="col-md-12 text-center">
-                <button id="clearcanvas" class="btn btn-default" ng-click="clearCanvas()">Clear Canvas</button>
-                <button id="erasecanvas" class="btn btn-default" ng-click="toEraser()">Eraser</button>
-                <button id="pencanvas"  class="btn btn-info" ng-click="toPen()">Pen</button>
+                <div class="padding-sm">
+                    <button id="clearcanvas" class="btn btn-default" ng-click="clearCanvas()">Clear Canvas</button>
+                    <button id="erasecanvas" class="btn btn-default" ng-click="toEraser()">Eraser</button>
+                    <button id="pencanvas"  class="btn btn-info" ng-click="toPen()">Pen</button>
+                </div>
+
             </div>
         </div>
 
