--- a/WebContent/public/html/canvas.html
+++ b/WebContent/public/html/canvas.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-offset-1 col-md-10">
                 <div class="colordiv">
                     <div class="row">
                         <div class="col-sm-11 padding-sm border-sm">
