Added about page

--- a/WebContent/public/html/login.html
+++ b/WebContent/public/html/login.html
@@ -9,5 +9,10 @@
         <div class="col-md-1">
             <button class="btn btn-success btn-height full-width" ng-click="login()">Login</button>
         </div>
+
+    </br>
+        <div class="col-md-12 text-center">
+            <button class="btn btn-info" ng-click="toAbout();">About</button>
+        </div>
     </div>
 </div>
