--- a/WebContent/public/index.html
+++ b/WebContent/public/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <title>ChatBlocs</title>
 
         <!-- Bootstrap Style -->
-        <link href="external/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="external/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
         <!-- Custom Style -->
-        <link href="css/main-style.css" rel="stylesheet"/>
-        <link href="css/space-size.css" rel="stylesheet"/>
-        <link href="css/room-style.css" rel="stylesheet"/>
-        <link href="css/login-style.css" rel="stylesheet"/>
-        <link href="css/canvas-style.css" rel="stylesheet"/>
+        <link href="css/main-style.css" rel="stylesheet" />
+        <link href="css/space-size.css" rel="stylesheet" />
+        <link href="css/room-style.css" rel="stylesheet" />
+        <link href="css/login-style.css" rel="stylesheet" />
+        <link href="css/canvas-style.css" rel="stylesheet" />
 
     </head>
+
     <body ng-app="collabApp" ng-controller="appCtrl" class="unselectable">
         <div id="nav">
             <div class="row">
@@ -65,5 +67,6 @@
     <script src="js/controllers/roomController.js"></script>
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/canvasController.js"></script>
+    <script src="js/controllers/aboutController.js"></script>
 
 </html>
