Added my bio and photo

--- a/WebContent/public/html/about.html
+++ b/WebContent/public/html/about.html
@@ -45,8 +45,14 @@
             </p>
 
 
-            <img class="img-responsive img-thumbnail" src="images/nancy.jpg" alt="Picture of Nancy" class="profile-pic" align="left" />
-            <p> { Nancy's bio } </p>
+            <img class="img-responsive img-thumbnail" src="images/nancy.jpeg" alt="Picture of Nancy" class="profile-pic" align="left" />
+            <p>
+                Nancy started her career journey while she was a senior in high school.
+                She is currently a Security Engineering Intern at Land O'Lakes,
+                but she has interned at Target, Mortenson Construction, and Medica Health.
+                She will be graduating in May 2018 with a B.S. in Computer Science from
+                the University of St. Thomas.
+            </p>
 
         </div>
 
