fixed no drawing on join room. button moved and matt's bio

--- a/WebContent/public/html/about.html
+++ b/WebContent/public/html/about.html
@@ -34,11 +34,16 @@
 
             <h3>The Team:</h3>
 
-            <img class="img-responsive img-thumbnail" src="images/mathew.jpg" alt="Picture of Matt" class="profile-pic" align="left" />
-            <p> { Matt's bio } </p>
+            <img class="img-responsive img-thumbnail" src="images/mathew.jpg" width="150" height="200" alt="Picture of Matt" class="profile-pic" align="left" />
+            <p>  My name is Mathew Schlichting. I graduated from the University
+                of St. Thomas in May of 2018. I have been programing since I was 15 when I took my first
+                college level computer science course. I fell in love with computers ever since. I have taken
+                as many computer science courses as possible during my college career. In addition, I graduated
+                with a 3.99 GPA and Summa Cum Laude honors. I have done research for the University of St.
+                Thomas which was published in August of 2017. </p>
 
 
-            <img class="img-responsive img-thumbnail" src="images/emily.jpg" alt="Picture of Emily" class="profile-pic" align="right" />
+            <img class="img-responsive img-thumbnail" src="images/emily.jpg" width="150" height="200" alt="Picture of Emily" class="profile-pic" align="right" />
             <p>
                 Emily is a fourth-year student at the University of St. Thomas and will graduate this May with a major in Computer Science and minors in music, Catholic Studies, and Latin. She has previously enjoyed reading, playing the piano, and knitting and is looking
                 forward to engaging in these hobbies again a week from the submission of this project.
