--- a/WebContent/public/html/login.html
+++ b/WebContent/public/html/login.html
@@ -12,7 +12,9 @@
 
     </br>
         <div class="col-md-12 text-center">
-            <button class="btn btn-info" ng-click="toAbout();">About</button>
+            <div class="padding-md">
+                <button class="btn btn-info" ng-click="toAbout();">About</button>
+            </div>
         </div>
     </div>
 </div>
