Added demo video

--- a/WebContent/public/html/about.html
+++ b/WebContent/public/html/about.html
@@ -30,8 +30,7 @@
             </p>
 
             <h3>Demo:</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/s7JCJUqPz8w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+                <source src="images/ChatBlocsDemo.mp4" type="video/mp4">
             <h3>The Team:</h3>
 
             <img class="img-responsive img-thumbnail" src="images/mathew.jpg" width="150" height="200" alt="Picture of Matt" class="profile-pic" align="left" />
