--- a/WebContent/public/html/about.html
+++ b/WebContent/public/html/about.html
@@ -30,7 +30,9 @@
             </p>
 
             <h3>Demo:</h3>
-                <source src="images/ChatBlocsDemo.mp4" type="video/mp4">
+                <video height="540" width="960" controls>
+			<source src="images/ChatBlocsDemo.mp4" type="video/mp4">
+		</video>
             <h3>The Team:</h3>
 
             <img class="img-responsive img-thumbnail" src="images/mathew.jpg" width="150" height="200" alt="Picture of Matt" class="profile-pic" align="left" />
